# TONY-PLUGS

./: .gitignore  .openhints  README.md  index.html  metadata.json  package-lock.json  package.json
.opencode/agents/gemini-devops/: AGENT.md
.opencode/agents/minimax-planner/: AGENT.md
.opencode/agents/nemotron-refactor/: AGENT.md
.opencode/agents/qwen-coder/: AGENT.md
.opencode/agents/qwen-debugger/: AGENT.md
.opencode/agents/qwen-docs/: AGENT.md
.opencode/shared-prompts/: linus-style.txt
.viking/: config.yaml
.viking/preferences/: linus-style.yaml
.viking/skills/: create-chunky-knob.md  draw-linus-waveform.md  implement-ink-bleed.md
docs/: AGENTS.md  CHANGELOG.md  IMPLEMENTATION_PLAN_INFINITE_LINE.md  SKILLS.md  STYLE_GUIDE.md  TONY_DAW_GUIDE.md
docs/history/: 2026-04-07_initial-project-setup.md
juce/: CMakeLists.txt
juce/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce/src/LookAndFeel/: LineManager.cpp  LineManager.h  LinusLookAndFeel.cpp  LinusLookAndFeel.h  LinusWaveformComponent.cpp  LinusWaveformComponent.h
juce/src/LookAndFeel/LineMutations/: LineMutation.h  LineMutations.cpp  LineMutations.h
src/: App.tsx
src/components/: JuceReference.tsx  LineCharacter.tsx  LineUI.tsx  VSTPlugin.tsx  WaveformPrototype.tsx
